--- a/rmcontrol/templates/index.html
+++ b/rmcontrol/templates/index.html
@@ -12,7 +12,7 @@
 			<li v-for="(command, index) in commands" @click.prevent="fireCommand(command)">
 				{% raw %}{{command.name}}{% endraw %}
 				<div class="options">
-					<a class="icon-pencil" @click.prevent.stop="editCommand(index)"></a>
+					<!-- <a class="icon-pencil" @click.prevent.stop="editCommand(index)"></a> -->
 					<a class="icon-trash" @click.prevent.stop="deleteCommand(index)"></a>
 				</div>
 			</li>
