--- a/rmcontrol/templates/index.html
+++ b/rmcontrol/templates/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RM Control</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{{url_for('static', filename='app.css')}}">
 	<link rel="stylesheet" href="https://file.myfontastic.com/dZwVd35qfMaPngzfXq8ozS/icons.css">
 </head>
