--- a/rmcontrol/static/app.css
+++ b/rmcontrol/static/app.css
@@ -64,11 +64,11 @@ li:active {
     animation: btn-color 0.25s forwards ease-out;
 }
 
-@-webkit-keyframes btn-color { 0% { -webkit-box-shadow: rgba(42, 175, 175, 0.5) 0 0 25px inset; } 100% { -webkit-box-shadow: rgba(42, 175, 175, 0.5) 0 0 0 inset; } }
-@-moz-keyframes    btn-color { 0% { -moz-box-shadow: rgba(42, 175, 175, 0.5) 0 0 25px inset; } 100% { -moz-box-shadow: rgba(42, 175, 175, 0.5) 0 0 0 inset; } }
-@-ms-keyframes     btn-color { 0% { -ms-box-shadow: rgba(42, 175, 175, 0.5) 0 0 25px inset; } 100% { -ms-box-shadow: rgba(42, 175, 175, 0.5) 0 0 0 inset; } }
-@-o-keyframes      btn-color { 0% { -o-box-shadow: rgba(42, 175, 175, 0.5) 0 0 25px inset; } 100% { -o-box-shadow: rgba(42, 175, 175, 0.5) 0 0 0 inset; } }
-@keyframes         btn-color { 0% { box-shadow: rgba(42, 175, 175, 0.5) 0 0 25px inset; } 100% { box-shadow: rgba(42, 175, 175, 0.5) 0 0 0 inset; } }
+@-webkit-keyframes btn-color { 0% { background-color: #e5ffe5; } 100% { background-color: #fff; } }
+@-moz-keyframes    btn-color { 0% { background-color: #e5ffe5; } 100% { background-color: #fff; } }
+@-ms-keyframes     btn-color { 0% { background-color: #e5ffe5; } 100% { background-color: #fff; } }
+@-o-keyframes      btn-color { 0% { background-color: #e5ffe5; } 100% { background-color: #fff; } }
+@keyframes         btn-color { 0% { background-color: #e5ffe5; } 100% { background-color: #fff; } }
 
 span {
     font-size: 125%;
